--- a/docker/py3.9_docker_20250207.yml
+++ b/docker/py3.9_docker_20250207.yml
@@ -6,8 +6,8 @@ channels:
 dependencies:
   - python=3.9.6
   - scrublet
-  - pandas
-  - numpy
+  - pandas=1.3.1
+  - numpy=1.21.1
   - matplotlib
   - scipy
   - scikit-learn
